# findates

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: copilot-instructions.md
examples/: calendar.rs  chrono-examples.rs  daycount.rs  ny_fed_holidays.rs
src/: algebra.rs  calendar.rs  conventions.rs  date.rs  daycount.rs  error.rs  lib.rs  schedule.rs
tests/: adjust.rs  business_day_schedule.rs  business_days.rs  calendar.rs  calendar_and_schedule.rs  day_count.rs  daycount.rs  schedule.rs  schedule_next.rs  us_treasury.rs
tests/setup/: mod.rs
